css/_style.scss
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);

@mixin orb(){
  display: block;
  cursor: pointer;
  position: absolute;
  border-radius: 100%;
  width: 62px;
  height: 62px;
  background: #EB3A36;
  z-index: 10;
  transition: transform .25s ease, box-shadow .25s ease;
  float: left;
  margin-left: 16px;
}

*{
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;

  &:target{
    animation: here 1s ease-out;
  }
}
:root{
  font-size: 16px;
  font-weight: 600;
  line-height: 28px;
}
body{
  background: #F4F4F4;
}

.list{
  padding: 0;
  margin: 0;
  height: auto;
  text-align: center;
  max-width: 90%;
  margin: 0 5% 1em;
  float: left;
  
  display: block;
  

  li{
    display: inline-block;
    width: auto;
    margin: 0 0;
    width: 25%;


    img{
      display: block;
      max-width: 100%;
      width: 65%;
      float: none;
      margin: auto;
      clear: both;
    }
  }
}
html, body{
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  float: left;

  font: {
    family: 'Source Sans Pro', Arial;
    weight: 500;
    size: 17px;
  }
  
  a{
    color: inherit;
    text-decoration: none;
    border-bottom: 2px dotted #3FAA75;

    &:hover{
      border-bottom: 2px solid #3FAA75;
    }
  }

  blockquote{
    padding: .5em;
    color: #000;
    display: block;
    position: relative;
    text-align: center;
    max-width: 80%;
    margin: 2em auto 2.5em;
    
    

    &:before{
      content:'';
      display: block;
      position: absolute;
      left: -1em;
      width: 24px;
      height: 24px;
    
      background:{
       image: url('../images/quote-left.svg');
        repeat: no-repeat;
        size: 100%;
      }
    }

    &:after{
      content:'';
      display: block;
      position: absolute;
      right: -1em;
      bottom: .5em;
      width: 24px;
      height: 24px;
    
      background:{
       image: url('../images/quote-right.svg');
        repeat: no-repeat;
        size: 100%;
      }
    }


  }
  main{
    float: left;
    width: 100%;
    height: 100%;


    header[role="header"]{
      float: left;
      display: block;
      position: relative;
      width: 100%;
      text-align: center;
      min-height: 420px;
      height: 420px;
      color: #fff;
      line-height: 1.5;

      background: {
        image: linear-gradient(rgba(white, .1) 2px, transparent 2px), linear-gradient(90deg, rgba(white, .1) 2px, transparent 2px), linear-gradient(rgba(255,255,255,.05) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,.05) 1px, transparent 1px);
        size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
        position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
        attachment : fixed;
      }

      &:after{
        content: '';
        display: block;
        position: absolute;
        width: 100%;
        height: 100%;

        background: {
          color: #39AB73;
          image: linear-gradient(to bottom right, #39AB73, #1DB1FC);
          attachment : fixed;
        }
        
        z-index: -1;

      }
      

      h1{
        font-size: 3.5em;
        letter-spacing: .15em;
        padding: 0;
        margin: 0;
        text-shadow: .05em .05em 0 rgba(black, .3);
        position: relative;
        z-index: 2;


        span{
          &:before{
            content: '{';
            letter-spacing: .15em;
          }
          &:after{
            content: '}';
            letter-spacing: .15em;
          }
        }
      }

      h2{
        border-top: .12em solid #fff; 
        border-bottom: .12em solid #fff;
        display: inline-block;
        padding: .35em .8em ;
        position: relative;
        z-index: 2;
        text-shadow: .08em .08em 0 rgba(black, .15);
      }

      h3{
        text-shadow: .07em .07em 0 rgba(black, .15);
      }

    }
  }
}

.align{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  @media all and (max-width: 640px){
      transform: translate(-50%, -50%) scale(.8);
  }   
}

ul{
  padding: 0;
  margin: 0;
  list-style: none;
  clear: both;
  height: 300px;

  li{
    float: left;
    width: 25%;
    margin: 0;
    padding: 0;
    

    img{
      max-width: 200px;
      float: left;
      display: inline;
    }
  }
}


.introduction {
  margin: auto;
  
  padding: 1em 0 2em;
  margin-top: 2px;
  display: block;
  position: relative;
  float: left;
  width: 100%;
  top: 2em;
}


.content{
  margin: auto;
  width: 100%;
  max-width: 840px;
  top: -100px;
  position: relative;
  

  float: none;


  img{
    display: block;
    max-width: 100%;
  }
}



.panel{
  @extend .bs-1; 

  float: left;
  padding: 16px;
  margin: auto;
  margin-bottom: 1em;
  background: #fff;
  width: 100%;

  h3{
    font-size: 24px;
    line-height: 32px;
    margin-bottom: 24px;
    padding: 0;
    margin-top: 0;
    color: #2EB2E8;
  }

  h4{
    color: #C2C2C2;
    padding: 0;
    margin: 0;
  }
}


// MD shadows

// Depths classes
.bs-1 {
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
}

.bs-2 {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
}

.bs-3 {
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !important;
}

.bs-4 {
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
}

.bs-5 {
  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22) !important;
}
/* ... */

